# GP2

./: .gitignore  CMakeLists.txt  Doxyfile  FindQScintilla.cmake  GPDeveloper.pro  README.md  aboutdialog_8hpp_source.html  annotated.html  class_developer_1_1_about_dialog-members.html  class_developer_1_1_about_dialog.html  class_developer_1_1_edge-members.html  class_developer_1_1_edge.html  class_developer_1_1_edge_item-members.html  class_developer_1_1_edge_item.html  class_developer_1_1_edit-members.html  class_developer_1_1_edit.html  class_developer_1_1_g_p_file-members.html  class_developer_1_1_g_p_file.html  class_developer_1_1_g_p_file__inherit__graph.map  class_developer_1_1_g_p_file__inherit__graph.md5  class_developer_1_1_graph-members.html  class_developer_1_1_graph.html  class_developer_1_1_graph__coll__graph.md5  class_developer_1_1_graph_widget-members.html  class_developer_1_1_graph_widget.html  class_developer_1_1_help_dialog-members.html  class_developer_1_1_help_dialog.html  class_developer_1_1_main_window-members.html  class_developer_1_1_main_window.html  class_developer_1_1_new_project_wizard-members.html  class_developer_1_1_new_project_wizard.html  class_developer_1_1_node-members.html  class_developer_1_1_node.html  class_developer_1_1_node_item-members.html  class_developer_1_1_node_item.html  class_developer_1_1_preferences_dialog-members.html  class_developer_1_1_preferences_dialog.html  class_developer_1_1_preferences_page-members.html  class_developer_1_1_preferences_page.html  class_developer_1_1_preferences_page__inherit__graph.map  (+155 more)
search/: all_5f.js  all_61.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_6d.js  all_6e.js  all_70.js  all_72.js  all_73.js  all_74.js  all_7e.js  classes_61.js  classes_65.js  classes_67.js  classes_68.js  classes_6d.js  classes_6e.js  classes_70.js  classes_72.js  classes_73.js  classes_77.js  enums_66.js  enums_67.js  enums_68.js  enumvalues_64.js  enumvalues_65.js  enumvalues_67.js  enumvalues_6d.js  enumvalues_6e.js  enumvalues_70.js  enumvalues_72.js  files_74.js  functions_61.js  functions_66.js  functions_67.js  functions_69.js  (+8 more)
src/: aboutdialog.cpp  aboutdialog.hpp  aboutdialog.ui  edge.cpp  edge.hpp  edit.cpp  edit.hpp  edit.ui  global.cpp  global.hpp  gpfile.cpp  gpfile.hpp  graph.cpp  graph.hpp  helpdialog.cpp  helpdialog.hpp  helpdialog.ui  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  newprojectwizard.cpp  newprojectwizard.hpp  newprojectwizard.ui  node.cpp  node.hpp  preferencesdialog.cpp  preferencesdialog.hpp  preferencesdialog.ui  prettytab.cpp  prettytab.hpp  prettytabbar.cpp  prettytabbar.hpp  prettytabheader.cpp  prettytabheader.hpp  prettytabmenu.cpp  prettytabmenu.hpp  prettytabwidget.cpp  prettytabwidget.hpp  (+24 more)
src/developer/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.hpp  codeeditor.cpp  codeeditor.hpp  conditioneditor.cpp  conditioneditor.hpp  conditionhighlighter.cpp  conditionhighlighter.hpp  conditiontokens.hpp  developer.pro  dotparser.cpp  dotparser.hpp  edge.cpp  edge.hpp  edit.cpp  edit.hpp  edit.ui  firstrundialog.cpp  firstrundialog.hpp  firstrundialog.ui  global.cpp  global.hpp  gpfile.cpp  gpfile.hpp  graph.cpp  graph.hpp  graphedit.cpp  graphedit.hpp  graphedit.ui  graphparser.cpp  graphparser.hpp  helpdialog.cpp  helpdialog.hpp  icons.qrc  importgraphdialog.cpp  importgraphdialog.hpp  importprogramdialog.cpp  importprogramdialog.hpp  importruledialog.cpp  (+73 more)
src/developer/graphview/: edgeitem.cpp  edgeitem.hpp  editedgedialog.cpp  editedgedialog.hpp  editedgedialog.ui  editnodedialog.cpp  editnodedialog.hpp  editnodedialog.ui  graphitem.cpp  graphitem.hpp  graphscene.cpp  graphscene.hpp  graphwidget.cpp  graphwidget.hpp  nodeitem.cpp  nodeitem.hpp
src/developer/preferences/: appearancepreferences.cpp  appearancepreferences.hpp  appearancepreferences.ui  preferencesdialog.cpp  preferencesdialog.hpp  preferencesdialog.ui  preferencespage.cpp  preferencespage.hpp  projectpreferences.cpp  projectpreferences.hpp  toolchainpreferences.cpp  toolchainpreferences.hpp
src/developer/stylesheets/: main.css
src/developer/templates/: newproject.gpp  newrule_alternative.gpr
src/developer/tests/: CMakeLists.txt  testproject.cxx
src/docs/: doxygen.css  mainpage.dox
src/documentation/: doxygen.css
src/gpmake/: gpmake.pro
src/gprc/: gprc.pro
src/graphview/: edgeitem.cpp  edgeitem.hpp  graphwidget.cpp  graphwidget.hpp  nodeitem.cpp  nodeitem.hpp
src/libgp/: CMakeLists.txt  errors.c  libgp.pro
src/preferences/: preferencesdialog.cpp  preferencesdialog.hpp  preferencesdialog.ui  preferencespage.cpp  preferencespage.hpp  projectpreferences.cpp  projectpreferences.hpp
src/stylesheets/: helpdialog.css  main.css  welcome.css
src/templates/: newproject.gpp
